--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
   <string name="sunrise">Sunrise</string>
   <string name="sunset">Sunset</string>
   <string name="dusk">Dusk</string>
+
+  <string name="never">Never</string>
 </resources>
