Add some info to the main screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
   <string name="dusk">Dusk</string>
 
   <string name="never">Never</string>
+
+  <string name="all_times_local">All times local</string>
+  <string name="version_info">Using Skylight version %s</string>
 </resources>
