Add alert dialog themes and show them in the demo app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
 
   <string name="all_times_local">All times local</string>
   <string name="version_info">Using Skylight version %s</string>
+
+  <string name="good_to_know">Good to know</string>
 </resources>
