--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
   <string name="app_name">Skylight demo</string>
 
+  <string name="settings">Settings</string>
+
   <string name="dawn">Dawn</string>
   <string name="sunrise">Sunrise</string>
   <string name="sunset">Sunset</string>
