Tweak display of Skylight version in sample app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
   <string name="never">Never</string>
 
   <string name="all_times_local">All times local</string>
-  <string name="version_info">Using Skylight version %s</string>
+  <string name="version_info">Skylight %s</string>
 
   <string name="good_to_know">Good to know</string>
 </resources>
