Deprecate :app and remove most of it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,4 @@
 <resources>
-  <string name="app_name">Skylight demo</string>
-
-  <string name="settings">Settings</string>
-
-  <string name="dawn">Dawn</string>
-  <string name="sunrise">Sunrise</string>
-  <string name="sunset">Sunset</string>
-  <string name="dusk">Dusk</string>
-
-  <string name="never">Never</string>
-
-  <string name="all_times_local">All times local</string>
-  <string name="version_info">Skylight %s</string>
-
-  <string name="good_to_know">Good to know</string>
+  <string name="skylight_android_moved">The Skylight sample for Android has moved:</string>
+  <string name="skylight_android_sample_link">https://github.com/drewhamilton/SkylightAndroid/tree/master/app</string>
 </resources>
